--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,7 +43,10 @@ body {
     letter-spacing: 6px;
     font-size: 40px;
 }
- 
+ .indigoBackground {
+     background: indigo;
+     color: #0DADCF;
+ }
 
 p {
     font-size: 40px;
